--- a/public/index.html
+++ b/public/index.html
@@ -4,36 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hello World</title>
-  <link href='/public/style.css' rel='stylesheet'>
+  <link href='style.css' rel='stylesheet'>
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 </head>
 <body>
   <h1>FCM Ejemplo</h1>
-  <p id="token"></p>
+  <p id="token">  </p>
  
-  <script src="/public/script.js" type="module"></script>
-  <script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyAy8KHTG-vxVDL2zQAngqVMfm65_kjl_2c",
-      authDomain: "pruebafcm2-1ff55.firebaseapp.com",
-      projectId: "pruebafcm2-1ff55",
-      storageBucket: "pruebafcm2-1ff55.firebasestorage.app",
-      messagingSenderId: "629866553995",
-      appId: "1:629866553995:web:5348a020e2b51ad11fea8e",
-      measurementId: "G-G0HBWKNCQE"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-  </script>
+  <script src="./script.js" type="module"></script>
 </body>
 
 </html>
